onboard flow, site settings, code highlighting and more

--- a/blog-frontend/app/globals.css
+++ b/blog-frontend/app/globals.css
@@ -6,6 +6,20 @@
   all: revert;
 }
 
+.post-md-content img {
+  max-width: 100%;
+}
+
+.post-md-content blockquote {
+  border-left: 4px solid #ccc;
+  padding-left: 8px;
+}
+
+.post-md-content code {
+  max-width: 100%;
+  overflow: auto;
+}
+
 :root {
   --background: 0 0% 100%;
 }
